src/components/App.scss
/* ... */
$fixed_header_height: 50px;

.advanced-wp-table-fixed-header-wrapper {
	height: $fixed_header_height;

	margin: -23px -20px 23px -22px;
	position: relative;
	z-index: 3;

	@mixin show_edit_icon {
		opacity: 1;
		visibility: visible;
	}

	.advanced-wp-table-edit-title-wrapper {
		.advanced-wp-table-edit-title-toggle {
			cursor: pointer;
			margin-right: -40px;
			opacity: 0;
			padding: 0 10px;
			position: relative;
			transition: opacity .4s ease-out;
			visibility: hidden;

			.dashicons {
				transition: none;
			}

			> div {
				align-items: center;
				display: inline-flex;
				height: 30px;
			}

			&:hover {
				@include show_edit_icon;
				color: #007cba;
			}
		}

		&:hover {
			.advanced-wp-table-edit-title-toggle {
				@include show_edit_icon;
			}

			&:after {
				content: none;
			}
		}
	}

	&.editor-toolbar-active {
		.advanced-wp-table-header-left {
			flex: 1;
		}

		.advanced-wp-table-header-right {
			flex: 0;
		}
	}
}

.advanced-wp-table-fixed-header {
	align-items: center;
	background-color: #fff;
	box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.3);
	display: flex;
	height: $fixed_header_height;
	margin: 0;
	padding: 15px 20px 15px 22px;
	position: fixed;
	right: 0;
	top: 32px;
	transition: transform 0.3s ease-in-out 0s;

	@media (min-width: 960px) {
		left: 160px;
	}

	@media (max-width: 960px) {
		left: 36px;
	}

	&.sticky {
		transform: none;
	}

	&.no-sticky {
		transform: translateY(-100%);
	}

	.advanced-wp-table-header-left,
	.advanced-wp-table-header-right {
		display: flex;
	}

	> div {
		flex: 1;
	}

	.advanced-wp-table-header-navigate-to-list {
		.button {
			align-items: center;
			display: inline-flex;

			.dashicons {
				margin: 0 5px 0 0;
			}
		}
	}

	.advanced-wp-table-header-middle {
		.advanced-wp-table-edit-title-wrapper {
			align-items: center;
			display: flex;
			justify-content: center;
		}

		h1 {
			margin: 0;
			overflow: hidden;
			padding: 0;
			text-overflow: ellipsis;
			user-select: none;
			white-space: nowrap;
		}

		[type="text"] {
			text-align: center;
			width: 100%;
		}
	}

	.advanced-wp-table-header-with-separator {
		padding-right: 14px;
		position: relative;

		&:after {
			background-color: #f0f0f0;
			content: '';
			height: 100%;
			position: absolute;
			right: 1px;
			top: 0;
			width: 1px;
		}
	}

	.advanced-wp-table-header-with-separator {
		&:not(.editor-toolbar-active) {
			&:last-child {
				&:after {
					opacity: 0;
					transition: opacity .2s ease-out;
				}
			}
		}
	}

	.advanced-wp-table-button-group {
		display: flex;
		padding: 0 0 0 10px;

		div[role="presentation"] {
			align-items: center;
			cursor: pointer;
			display: inline-flex;
			height: 30px;

			.dashicons {
				transition: none;
			}

			&:not(:last-child) {
				margin: 0 10px 0 0;
			}

			&:not(.advanced-wp-table-button-disabled) {
				&:hover {
					color: #007cba;
				}
			}

			&.advanced-wp-table-button-disabled {
				.dashicons {
					cursor: default;
					opacity: .3;
				}
			}
		}
	}

	.advanced-wp-table-header-middle {
		min-width: 0;
	}

	.advanced-wp-table-header-right {
		justify-content: flex-end;

		> * {
			margin: 0 0 0 8px;
		}

		.advanced-wp-table-open-settings-btn {
			background-color: transparent;
			border: none;
			cursor: pointer;
		}
	}

	.advanced-wp-table-shortcode {
		align-items: center;
		cursor: pointer;
		display: inline-flex;
		height: 30px;
	}
}

.folded {
	.advanced-wp-table-fixed-header {
		left: 36px;
	}
}

.advanced-wp-table-pagination-wrapper {
	align-items: flex-end;
	display: flex;
	justify-content: space-between;
	min-height: 26px;
}

.advanced-wp-table-total-info {
	font-weight: 500;
}

.advanced-wp-table-pagination {
	margin: 0;
	padding: 0;

	li {
		background: #f3f5f6;
		border-color: #0071a1;
		border-radius: 3px;
		border-style: solid;
		border-width: 1px;
		display: inline-block;
		font-size: 14px;
		line-height: 24px;
		min-height: 24px;
		min-width: 24px;

		text-align: center;

		vertical-align: baseline;

		&:not(:last-child) {
			margin: 0 4px 0 0;
		}

		&:last-child {
			margin: 0;
		}

		a {
			box-shadow: none;
			color: #0071a1;
			cursor: pointer;
			display: block;
			outline-style: none;
		}

		&.disabled {
			background: #f7f7f7;
			border-color: #ddd;
			box-shadow: none;
			text-shadow: 0 1px 0 #fff;
			transform: none;

			a {
				color: #a0a5aa;
				cursor: default;
			}
		}

		&.active {
			background: #0071a1;
			border-color: #0071a1;

			a {
				color: #fff;
			}
		}
	}
}

.advanced-wp-table-list,
.advanced-wp-table-list-loading {
	margin: 1em 0;
}

.advanced-wp-table-list {
	.advanced-wp-table-shortcode,
	.advanced-wp-table-shortcode:hover,
	.advanced-wp-table-shortcode:focus {
		background: transparent;
		border: none;
		box-shadow: none;
		margin: 0;
		outline: none;
		padding: 0;
	}
}

@keyframes advanced-wp-table-placeholder {
	0% {
		background-position: -468px 0
	}
	100% {
		background-position: 468px 0
	}
}

.advanced-wp-table-liner-loading {
	animation-duration: 1s;
	animation-fill-mode: forwards;
	animation-iteration-count: infinite;
	animation-name: advanced-wp-table-placeholder;
	animation-timing-function: linear;
	background: #f6f7f8;
	background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
	background-size: 1000px 104px;
	height: 16px;
	overflow: hidden;
	position: relative;

	&.title-loading {
		width: 100%;
	}

	&.actions-loading {
		margin: 8px 0 0;
		max-width: 150px;
		width: 100%;
	}

	&.type-loading {
		max-width: 100px;
		width: 100%;
	}

	&.shortcode-loading {
		max-width: 250px;
		width: 100%;
	}
}
/* ... */

